--- a/css/questions.css
+++ b/css/questions.css
@@ -43,3 +43,52 @@ a:hover {
 .round {
   border-radius: 50%;
 }
+#Introvert{
+  background-color: white;
+  border: 2px solid black;
+  margin-top: 20px;
+  margin-right: 20px;
+  padding: 3px;
+  text-align: justify;
+  position: relative;
+}
+#Observant{
+  background-color: white;
+  border: 2px solid black;
+  margin-top: 20px;
+  margin-right: 20px;
+  padding: 3px;
+  text-align: justify;
+  position: relative;
+}
+#Thinking{
+  background-color: white;
+  border: 2px solid black;
+  margin-top: 20px;
+  margin-right: 20px;
+  padding: 3px;
+  text-align: justify;
+  position: relative;
+}
+#Judging {
+background-color: white;
+border: 2px solid black;
+margin-top: 20px;
+margin-right: 20px;
+padding: 3px;
+text-align: justify;
+position: relative;
+}
+#results {
+background-color: white;
+border: 2px solid black;
+margin-top: 20px;
+margin-right: 20px;
+padding: 3px;
+text-align: justify;
+position: relative
+
+}
+#work{
+background-color: green;
+}
